test/tests/operators/http/http_error_encode_without_body.txt
error: encoding specified without a `body`
 --> tests/operators/http/http_error_encode_without_body.tql:5:46
  |
5 | http "https://example.org/data.json", encode="json" {
  |                                              ^^^^^^ 
  |
